2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b39

 * Fix: Added missing files to po/filelist-core, adjust pot files.
 
 * Fix: Typo in css/yui/container.css
 
 * Change: Use of nl2br() in editField(), e.g. album description.
 
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b38

 * Fix/Change: Add new param $useAccesskey to galleryIconLink()
   - If set to no, an existing accesskey identifier is just removed,
   	 but not used.
   	 This was a problem in thumbnail view with options as icons.
   	 (e.g. multiple "send as ecard" with same accesskey)
   	 
 * Fix: Link back to stats-wizard in stats was wrong.
 
 * Fix: Focus Javascript in popups/edit_caption.php was outdated.
 
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b37

 * Change: Use nice YUI tooltips in album view.

   - Adjust css classname to g-tooltip in js/yui/container-min.js
   - Added new css class in css/screen.css.default
   - Modified method Album::getThumbnailTag
   -- If not given, add a HTML id
   
2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b36

 * Change: Update js/wz_tooltip.js to Version 3.45
 
 * Change: Update js/wz_jsgraphics.js to Version 3.00
 
2007-02-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b35

 * New: lib/filetypes.php
 
 * Change: Moved from util.php into lib/filetypes.php
 		   - acceptableArchive()
 		   - acceptableArchiveList()
 		   - acceptableFormat()
 		   - acceptableFormatList()
 		   - acceptableFormatRegexp()
 		   - acceptableImageList()
 		   - acceptableMovieList()
 		   - isImage()
 		   - isMovie()
  
  		  Added phpdoc for all and ordered them alphabetical.
 
 * Change: Moved processNewImage() into lib/albumItem.php
 
 * Change: Moved rmdirRecursive() into lib/filesystem.php
 
 * Fix: Cleanup and repaired autocomplete.
 
2007-02-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b34

 * Change: Nicified (with accesskeys) diagnotisc page.
 
 * Fix: Double accesskey in session_test.php
 
 * Change: Some layout corrections in view_album.php
 